fixed margin spacing for siemens logo

--- a/css/main.css
+++ b/css/main.css
@@ -6356,6 +6356,21 @@ nav {
     #sponsors .sb-super .tagline {
       font-size: 2.5em; } }
   @media (max-width: 575.98px) {
+    #sponsors .sb-super .sb {
+      margin-top: 2em; } }
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    #sponsors .sb-super .sb {
+      margin-top: 2em; } }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    #sponsors .sb-super .sb {
+      margin-top: 0em; } }
+  @media (min-width: 992px) and (max-width: 1199.98px) {
+    #sponsors .sb-super .sb {
+      margin-top: 0em; } }
+  @media (min-width: 1200px) {
+    #sponsors .sb-super .sb {
+      margin-top: 0em; } }
+  @media (max-width: 575.98px) {
     #sponsors .sb-list > div {
       padding: 1em; } }
   @media (min-width: 576px) and (max-width: 767.98px) {
