--- a/scss/_sponsors.scss
+++ b/scss/_sponsors.scss
@@ -50,6 +50,13 @@
 	.sb {
 	    @extend .col-12;
 	    @extend .col-md-8;
+
+	    @include media-breakpoint-only(xs) { margin-top: 2em; }
+	    @include media-breakpoint-only(sm) { margin-top: 2em; }
+	    @include media-breakpoint-only(md) { margin-top: 0em; }
+	    @include media-breakpoint-only(lg) { margin-top: 0em; }
+	    @include media-breakpoint-only(xl) { margin-top: 0em; }
+
 	}
     }
 
